--- a/src/style.css
+++ b/src/style.css
@@ -1,75 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background-color: #121214;
-    color: #fff;
-    font-size: 1.6rem;
-    font-family: 'Roboto', sans-serif;
-    display: grid;
-    min-height: 100vh;
+  background-color: #121214;
+  color: #fff;
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+  display: grid;
+  min-height: 100vh;
 }
 
 main {
-    height: 50%;
-    align-self: end;
-    justify-self: center;
+  height: 50%;
+  align-self: end;
+  justify-self: center;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 button svg {
-    width: clamp(3.2rem, 2rem + 12vw, 6.4rem);
+  width: clamp(3.2rem, 2rem + 12vw, 6.4rem);
 }
 
 #timer {
-    font-size: clamp(8.8rem, 4rem + 10vw, 8.8rem);
-    display: flex;
-    margin-bottom: 1.6rem;
+  font-size: clamp(8.8rem, 4rem + 10vw, 8.8rem);
+  display: flex;
+  margin-bottom: 1.6rem;
 }
 
 #controls {
-    background-color: hsla(194, 88%, 53%, 0.13);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 3.2rem;
-    border-radius: 9999px; /* pill */
-    width: clamp(10rem, 10rem + 30vw, 22.8rem);
-    height: clamp(8rem, 5rem + 10vw, 10.8rem);
+  background-color: hsla(194, 88%, 53%, 0.13);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3.2rem;
+  border-radius: 9999px; /* pill */
+  width: clamp(10rem, 10rem + 30vw, 22.8rem);
+  height: clamp(8rem, 5rem + 10vw, 10.8rem);
 }
 
 .play svg,
 .pause svg,
 .sound-on svg {
-    fill: #42d3ff;
+  fill: #42d3ff;
 }
 
 .stop svg,
 .stopwatch svg,
 .sound-off svg {
-    fill: #fff;
+  fill: #fff;
 }
 
 footer {
-    justify-self: end;
-    align-self: end;
-    padding: 0 4rem 3.2rem 0;
+  justify-self: end;
+  align-self: end;
+  padding: 0 4rem 3.2rem 0;
 }
