--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,22 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #2a7b9b;
+  background-color: #8096b8;
   color: #fff;
-  display: flex;
+}
+
+/* Header */
+.header {
+  background-color: #687ea0;
+  padding: 1.5rem;
+  text-align: left;
+}
+
+.header .logo {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
 }
 
 .container {
@@ -25,6 +38,7 @@ body {
   align-items: center;
 }
 
+/* Tabs */
 .tabs {
   display: flex;
   justify-content: center;
@@ -50,7 +64,7 @@ body {
 
 .tab.active {
   background-color: #fff;
-  color: #2a7b9b;
+  color: #687ea0;
 }
 
 /* Timer */
@@ -63,7 +77,7 @@ body {
   font-size: 2rem;
   padding: 1rem 3rem;
   border: none;
-  background-color: #42d3ff;
+  background-color: #c9dfff;
   color: #fff;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -77,7 +91,7 @@ body {
 
 /* Tasks */
 .tasks {
-  background-color: #3c8db3;
+  background-color: #b1c7e7;
   padding: 2rem;
   border-radius: 0.8rem;
   width: 100%;
@@ -97,7 +111,7 @@ body {
 }
 
 .task-list li {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #7f98bd;
   padding: 1rem;
   border-radius: 0.4rem;
   margin-bottom: 0.8rem;
@@ -143,7 +157,7 @@ body {
 
 .add-task {
   background-color: #fff;
-  color: #2a7b9b;
+  color: #687ea0;
   border: none;
   padding: 1rem 2rem;
   font-size: 1.6rem;
