--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,8 @@ body {
 
 /* Timer */
 .time-display {
-  font-size: 8rem;
+  font-size: 18rem;
+  font-weight: 700;
   margin-bottom: 2rem;
 }
 
@@ -82,7 +83,7 @@ body {
   border-radius: 0.5rem;
   cursor: pointer;
   transition: filter 0.2s, background-color 0.2s;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .start-button:hover {
@@ -95,7 +96,7 @@ body {
   padding: 2rem;
   border-radius: 0.8rem;
   width: 100%;
-  max-width: 40rem;
+  max-width: 56rem;
 }
 
 .tasks h3 {
@@ -170,3 +171,22 @@ body {
   background-color: #e0e0e0;
   transform: translateY(-2px);
 }
+
+/* Footer */
+.footer {
+    width: 100%;
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 1.5rem 0;
+    position: relative;
+    bottom: 0;
+    left: 0;
+}
+
+.footer p {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
+/* Media Queries */
