--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -7,7 +7,6 @@
 
 :root {
   font-size: 62.5%;
-  height: 100%;
 }
 
 body {
@@ -48,6 +47,7 @@ body {
   font-size: 20rem;
   font-weight: 700;
   margin-bottom: 1.5rem;
+  text-align: center;
 }
 
 .timer-controls {
@@ -133,7 +133,6 @@ body {
   justify-content: space-between;
   align-items: center;
   white-space: normal;
-  overflow-wrap: break-word;
   word-break: break-all;
 }
 .tasks .task-list li button {
@@ -238,13 +237,9 @@ body {
 }
 .footer p {
   font-size: 1.6rem;
-  color: #fff;
 }
 
 @media (max-width: 768px) {
-  html {
-    font-size: 55%;
-  }
   .container {
     padding: 2rem 1rem;
   }
@@ -282,16 +277,17 @@ body {
   }
 }
 @media (max-width: 570px) {
-  html {
-    font-size: 50%;
+  .header {
+    padding: 1rem;
+  }
+  .header .logo {
+    font-size: 1.8rem;
   }
   .time-display {
     font-size: 10rem;
-    text-align: center;
   }
   .timer-title {
     font-size: 1.8rem;
-    text-align: center;
   }
   .tabs {
     flex-direction: column;
@@ -304,13 +300,6 @@ body {
     width: 100%;
     text-align: center;
   }
-  .start-button {
-    font-size: 2rem;
-    padding: 1.2rem 3.6rem;
-    display: block;
-    margin: 0 auto 4rem;
-    width: auto;
-  }
   .tasks {
     padding: 1rem;
     width: 90%;
@@ -322,8 +311,6 @@ body {
     font-size: 1.2rem;
   }
   .tasks .new-task-container {
-    display: flex;
-    gap: 1rem;
     flex-wrap: wrap;
   }
   .tasks .new-task-input {
